--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -93,6 +93,25 @@
           /etc/profile.d/postgres is not in expected format:
           {{ _test_postgres_profile.diff }}.
 
+    - name: 'Default | verify config | query postgres_owner'
+      ansible.builtin.copy:
+        src: 'files/postgres_owner'
+        dest: '/etc/postgresql/17/scripts/postgres_owner'
+        owner: 'postgres'
+        group: 'postgres'
+        mode: '0700'
+      check_mode: true
+      diff: true
+      register: _test_postgres_owner
+
+    - name: 'Default | verify config | assert postgres_owner'
+      ansible.builtin.assert:
+        that:
+          - not _test_postgres_owner.changed
+        fail_msg: >
+          /etc/postgresql/17/scripts/postgres_owner is not in expected format:
+          {{ _test_postgres_owner.diff }}.
+
     - name: 'Default | verify config | query environment'
       ansible.builtin.copy:
         src: 'files/environment'
